--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>ES6</title>
 </head>
 <body>
-    <main id="app"></main>
+    <div id="app"></div>
     <script src="../src/index.js"></script>
 </body>
 </html>
